--- a/content/css/main-ltr.css
+++ b/content/css/main-ltr.css
@@ -148,6 +148,11 @@ main {
     .globalBtn {
       font-size: 16px;
       padding: 10.222px 15.333px; } }
+  @media (max-width: 330px) {
+    .globalBtn {
+      font-size: 16px;
+      padding: 5px;
+      font-weight: 600; } }
 
 #header {
   width: 100%;
@@ -475,10 +480,18 @@ footer {
             .home__content__header__title p:nth-child(2) img {
               width: 32px;
               height: 32px; } }
+          @media (max-width: 330px) {
+            .home__content__header__title p:nth-child(2) img {
+              width: 25px;
+              height: 25px; } }
       @media (max-width: 991px) {
         .home__content__header__title p {
           font-size: 32px;
           font-weight: 800; } }
+      @media (max-width: 330px) {
+        .home__content__header__title p {
+          font-size: 25px;
+          font-weight: 600; } }
     .home__content__header__desc {
       max-width: 642px;
       text-align: center;
@@ -494,6 +507,11 @@ footer {
         @media (max-width: 991px) {
           .home__content__header__desc p {
             font-size: 14px; } }
+        @media (max-width: 330px) {
+          .home__content__header__desc p {
+            max-width: 80%;
+            text-align: center;
+            margin: auto; } }
     .home__content__btns {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -509,6 +527,14 @@ footer {
       gap: 15px;
       position: relative;
       width: 100%; }
+      @media (max-width: 330px) {
+        .home__content__btns {
+          font-size: 16px;
+          gap: 20px;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+              -ms-flex-direction: column;
+                  flex-direction: column; } }
       .home__content__btns .homeBTn {
         padding: 14.222px 28.444px;
         display: -webkit-box;
@@ -526,6 +552,10 @@ footer {
         font-family: "Effra VF Trial", sans-serif;
         font-weight: 600;
         font-size: 18px; }
+        @media (max-width: 330px) {
+          .home__content__btns .homeBTn {
+            font-size: 16px;
+            gap: 5px; } }
       .home__content__btns__getnow {
         position: absolute;
         right: 5%;
@@ -586,6 +616,10 @@ footer {
         .home .pageTitle p {
           font-size: 32px;
           font-weight: 600; } }
+      @media (max-width: 330px) {
+        .home .pageTitle p {
+          font-size: 25px;
+          font-weight: 600; } }
 
 .clickAway {
   display: -webkit-box;
@@ -601,6 +635,9 @@ footer {
   gap: 43px;
   padding: 71.111px 20px;
   background-color: #A8FF35; }
+  @media (max-width: 991px) {
+    .clickAway {
+      padding: 30px 20px; } }
   .clickAway__header p {
     color: #000;
     text-align: center;
@@ -633,7 +670,19 @@ footer {
     display: none; }
     @media (max-width: 991px) {
       .clickAway__imageResponsive {
-        display: inline-block; } }
+        display: inline-block;
+        height: 255px; }
+        .clickAway__imageResponsive img {
+          width: 100%;
+          height: 100%; } }
+    @media (max-width: 330px) {
+      .clickAway__imageResponsive {
+        display: inline-block;
+        height: 255px;
+        width: 90%; }
+        .clickAway__imageResponsive img {
+          width: 100%;
+          height: 100%; } }
   .clickAway__desc {
     width: 100%;
     -ms-flex-item-align: center;
@@ -665,71 +714,40 @@ footer {
           justify-content: center;
   gap: 30px;
   padding: 71px 99px;
-  background-color: #A8FF35;
+  background-color: black;
   width: 100%; }
   @media (max-width: 991px) {
     .joinUsNow {
       padding: 30px 40px; } }
-  .joinUsNow__first {
-    position: relative;
+  .joinUsNow__item {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-    .joinUsNow__first__business img {
-      position: absolute;
-      left: -20%;
-      top: -30%; }
-      @media (max-width: 991px) {
-        .joinUsNow__first__business img {
-          top: -70%;
-          left: -25%; } }
-      @media (max-width: 440px) {
-        .joinUsNow__first__business img {
-          top: -80%;
-          left: -30%; } }
-    .joinUsNow__first__title {
-      width: 100%;
-      text-align: center;
-      -ms-flex-item-align: center;
-          align-self: center;
-      color: #000;
-      text-align: center;
-      font-family: "Effra VF Trial", sans-serif;
-      font-size: 56.889px;
-      font-style: normal;
-      font-weight: 700;
-      margin: 0;
-      line-height: normal; }
-      @media (max-width: 991px) {
-        .joinUsNow__first__title {
-          font-size: 36px; } }
-      @media (max-width: 440px) {
-        .joinUsNow__first__title {
-          font-size: 30px; } }
-  .joinUsNow__second {
-    width: 100%;
+    gap: 0; }
+  .joinUsNow__item__mobile {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-    .joinUsNow__second__profit img {
-      position: absolute;
-      left: 100%;
-      top: 0%; }
-    .joinUsNow__second__toogle {
-      position: relative;
-      padding: 10px; }
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    @media (max-width: 991px) {
+      .joinUsNow__item__mobile {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        gap: 32px; } }
+    @media (max-width: 991px) {
+      .joinUsNow__item__mobile img:nth-child(2) {
+        -ms-flex-item-align: end;
+            align-self: flex-end; } }
 
 footer {
   background-color: white; }
@@ -750,7 +768,11 @@ footer {
   gap: 85px; }
   @media (max-width: 991px) {
     .termsAndServices {
-      padding: 30px; } }
+      padding: 30px;
+      gap: 30px; } }
+  @media (max-width: 330px) {
+    .termsAndServices {
+      padding: 30px 15px; } }
   .termsAndServices__part {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -823,7 +845,7 @@ footer {
       align-self: center; }
   @media (max-width: 991px) {
     .downloadHaggz {
-      padding: 40px 0px; } }
+      padding: 40px 5px; } }
   .downloadHaggz__images {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -859,6 +881,11 @@ footer {
         font-size: 32px;
         font-style: normal;
         font-weight: 400; } }
+    @media (max-width: 330px) {
+      .downloadHaggz__title {
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 400; } }
     .downloadHaggz__title span {
       color: #000;
       font-family: "TypoGraphica", sans-serif;
@@ -874,7 +901,23 @@ footer {
   .downloadHaggz__btns {
     width: -webkit-max-content;
     width: -moz-max-content;
-    width: max-content; }
+    width: max-content;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    @media (max-width: 991px) {
+      .downloadHaggz__btns {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        gap: 20px; } }
 
 footer {
   background-color: #E9E9E9; }
