--- a/content/scss/components/_globalBtn.scss
+++ b/content/scss/components/_globalBtn.scss
@@ -15,4 +15,9 @@
         font-size: 16px;
         padding: 10.222px 15.333px;
     }
+    @include responsive (max,330px) {
+        font-size: 16px;
+        padding: 5px;
+        font-weight: 600;
+    }
 }
