--- a/content/scss/pages/_terms.scss
+++ b/content/scss/pages/_terms.scss
@@ -5,9 +5,12 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 85px;
-
     @include responsive (max, 991px) {
         padding: 30px;
+        gap: 30px;
+    }
+    @include responsive (max, 330px) {
+        padding:30px 15px;
     }
 
     &__part {
@@ -65,7 +68,7 @@
     align-self: center;
 
     @include responsive (max, 991px) {
-        padding: 40px 0px;
+        padding: 40px 5px;
     }
 
     &__images {
@@ -103,6 +106,11 @@
             font-style: normal;
             font-weight: 400;
         }
+        @include responsive (max, 330px) {
+            font-size: 25px;
+            font-style: normal;
+            font-weight: 400;
+        }
 
         span {
             color: #000;
@@ -121,6 +129,13 @@
 
     &__btns {
         width: max-content;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        @include responsive (max,991px) {
+            flex-direction: column;
+            gap: 20px;
+        }
     }
 }
 
