--- a/content/scss/layout/_navigation.scss
+++ b/content/scss/layout/_navigation.scss
@@ -4,8 +4,9 @@
     z-index: 100;
     top: 0;
     transition: all .3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+
     .navsbar {
-        padding: 25px 99px; 
+        padding: 25px 99px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -23,6 +24,7 @@
             gap: 20px;
             overflow: hidden;
             width: 240px;
+
             img {
                 width: 114px;
                 height: 37px;
@@ -36,6 +38,7 @@
             gap: 35px;
             margin-bottom: 0;
             flex: 1 0 0;
+
             @include responsive (max, 991px) {
                 display: none;
             }
@@ -110,6 +113,40 @@
                 font-size: 16px;
                 font-style: normal;
                 font-weight: 400;
+                position: relative;
+                transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+                &:hover {
+                    background-color: $color-primary;
+                    box-shadow: 0 0 5px rgba(255, 255, 255, .3s);
+                }
+
+                &::after {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    border-radius: 4em;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    opacity: 0;
+                    transition: all 0.5s;
+                    box-shadow: 0 0 1px 5px white;
+                }
+
+                &:active::after {
+                    box-shadow: 0 0 0 0 white;
+                    position: absolute;
+                    border-radius: 4em;
+                    left: 0;
+                    top: 0;
+                    opacity: 1;
+                    transition: 0s;
+                }
+                &:active {
+                    top: 1px;
+                }
             }
 
             @include responsive (max, 991px) {
@@ -137,6 +174,7 @@
     padding: 12px;
     background-color: black;
     height: 448px !important;
+
     &__list {
         text-align: center;
         width: 100%;
