--- a/content/scss/pages/_index.scss
+++ b/content/scss/pages/_index.scss
@@ -7,7 +7,7 @@
     padding-bottom: 0;
     background-color: black;
     height: max-content;
-
+    overflow: hidden;
     @include responsive (max, 991px) {
         padding-inline: 18px;
     }
@@ -44,6 +44,7 @@
                                 width: 32px;
                                 height: 32px;
                             }
+
                             @include responsive (max, 330px) {
                                 width: 25px;
                                 height: 25px;
@@ -55,6 +56,7 @@
                         font-size: 32px;
                         font-weight: 800;
                     }
+
                     @include responsive (max, 330px) {
                         font-size: 25px;
                         font-weight: 600;
@@ -79,6 +81,7 @@
                     @include responsive (max, 991px) {
                         font-size: 14px;
                     }
+
                     @include responsive (max, 330px) {
                         max-width: 80%;
                         text-align: center;
@@ -96,11 +99,13 @@
             gap: 15px;
             position: relative;
             width: 100%;
+
             @include responsive (max, 330px) {
                 font-size: 16px;
                 gap: 20px;
                 flex-direction: column;
             }
+
             .homeBTn {
                 padding: 14.222px 28.444px;
                 display: flex;
@@ -112,10 +117,13 @@
                 font-family: $mainFont;
                 font-weight: 600;
                 font-size: 18px;
+
                 @include responsive (max, 330px) {
                     font-size: 16px;
                     gap: 5px;
+                    padding: 14.222px 14.444px;
                 }
+
             }
 
             &__getnow {
@@ -193,6 +201,7 @@
                 font-size: 32px;
                 font-weight: 600;
             }
+
             @include responsive (max, 330px) {
                 font-size: 25px;
                 font-weight: 600;
@@ -209,10 +218,12 @@
     gap: 43px;
     padding: 71.111px 20px;
     background-color: $color-primary;
-    @include responsive (max,991px) {
+
+    @include responsive (max, 991px) {
         padding: 30px 20px;
 
     }
+
     &__header {
         p {
             color: #000;
@@ -221,54 +232,65 @@
             font-size: 64px;
             font-style: normal;
             font-weight: 800;
-            margin: 0;
+            line-height: normal;
             @include responsive (max, 991px) {
-                text-align: center;
-                font-family: $mainFont;
                 font-size: 28px;
-                font-style: normal;
-                font-weight: 800;
+                line-height: 112%
             }
         }
     }
 
     &__image {
-        width: 355px;
-        height: 255px;
-        @include responsive (max,991) {
-            width: 80%;
-            height: 255px;
+        width: 600px;
+        height: 400px;
+
+        @include responsive (max, 991px) {
+            width: 600px;
+            height: 400px;
         }
+
         img {
             width: 100%;
             height: 100%;
         }
 
-        @include responsive(max, 991px) {
-            display: none;
+        @include responsive (max, 600px) {
+            width: 100%;
+            height: 350px;
         }
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+
+        // @include responsive(max, 991px) {
+        //     display: none;
+        // }
     }
 
     &__imageResponsive {
         display: none;
 
-        @include responsive (max, 991px) {
-            display: inline-block;
-            height: 255px;
-            img {
-                width: 100%;
-                height: 100%;
-            }
-        }
-        @include responsive (max, 330px) {
-            display: inline-block;
-            height: 255px;
-            width: 90%;
-            img {
-                width: 100%;
-                height: 100%;
-            }
-    }
+        //     @include responsive (max, 991px) {
+        //         display: inline-block;
+        //         width: 100%;
+        //         height: 100%;
+        //         img {
+        //             width: 100%;
+        //             height: 100%;
+        //         }
+        //     }
+        //     @include responsive (max, 330px) {
+        //         display: inline-block;
+        //         height: 400px;
+        //         width: 90%;
+        //         img {
+        //             width: 100%;
+        //             height: 100%;
+        //         }
+        // }
+        // }
     }
 
     &__desc {
@@ -308,22 +330,66 @@
         display: flex;
         align-items: center;
         gap: 0;
+        .becomePartner {
+            &:hover {
+                background-color: $color-primary;
+                box-shadow: 0 0 5px rgba(255, 255, 255, .3s);
+            }
+
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                border-radius: 4em;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                opacity: 0;
+                transition: all 0.5s;
+                box-shadow: 0 0 1px 5px white;
+            }
+
+            &:active::after {
+                box-shadow: 0 0 0 0 white;
+                position: absolute;
+                border-radius: 4em;
+                left: 0;
+                top: 0;
+                opacity: 1;
+                transition: 0s;
+            }
+            &:active {
+                top: 1px;
+            }
+        }
     }
+
     &__item__mobile {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        @include responsive (max,991px) {
+        // justify-content: space-between;
+        max-width: 100%;
+        overflow: hidden;
+        position: relative;
+        overflow: hidden;
+        @include responsive (max, 991px) {
             flex-direction: column;
             gap: 32px;
         }
 
         img {
             &:nth-child(2) {
-                @include responsive (max,991px) {
+                @include responsive (max, 991px) {
                     align-self: flex-end;
                 }
             }
+        }
+
+        .business-text {
+            position: absolute;
+            top: -5px;
+            #{$s}:5%;
         }
     }
 }
