--- a/content/scss/pages/_terms.scss
+++ b/content/scss/pages/_terms.scss
@@ -5,12 +5,14 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 85px;
+
     @include responsive (max, 991px) {
         padding: 30px;
         gap: 30px;
     }
+
     @include responsive (max, 330px) {
-        padding:30px 15px;
+        padding: 30px 15px;
     }
 
     &__part {
@@ -19,6 +21,7 @@
         align-items: flex-start;
         gap: 50px;
         width: 100%;
+
         &__first {
             display: flex;
             flex-direction: column;
@@ -32,6 +35,7 @@
                 align-items: flex-start;
                 gap: 15px;
                 width: 100%;
+
                 p {
                     margin: 0;
                     width: 100%;
@@ -78,12 +82,15 @@
         border-radius: 35.556px;
         width: 100%;
         gap: 50px;
-        @include responsive (max,991px) {
+
+        @include responsive (max, 991px) {
             display: none;
         }
+
         &__item {
             width: calc((100% / 4) - 50px);
             height: 217px;
+
             img {
                 width: 100%;
                 height: 100%;
@@ -93,19 +100,23 @@
 
     &__title {
         color: #000;
-
         text-align: center;
         font-family: $mainFont;
         font-size: 64px;
         font-style: normal;
-        font-weight: 400;
+        font-weight: 700;
         line-height: 112%;
+        /* 71.68px */
 
         @include responsive (max, 991px) {
-            font-size: 32px;
+            color: #000;
+            text-align: center;
+            font-family: $mainFont;
+            font-size: 28px;
             font-style: normal;
-            font-weight: 400;
+            font-weight: 800;
         }
+
         @include responsive (max, 330px) {
             font-size: 25px;
             font-style: normal;
@@ -114,31 +125,49 @@
 
         span {
             color: #000;
-            font-family: $subFont;
+            font-family: TypoGraphica;
             font-size: 64px;
             font-style: normal;
             font-weight: 400;
-            line-height: 112%;
+
             @include responsive (max, 991px) {
-                font-size: 32px;
+                color: #000;
+                text-align: center;
+                font-family: $mainFont;
+                font-size: 28px;
                 font-style: normal;
-                font-weight: 400;
+                font-weight: 800;
+
             }
         }
     }
 
     &__btns {
-        width: max-content;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        @include responsive (max,991px) {
+        gap: 15px;
+
+        @include responsive (max, 991px) {
             flex-direction: column;
             gap: 20px;
         }
-    }
-}
 
-footer {
-    background-color: #E9E9E9;
+        a {
+            padding: 14.222px 28.444px;
+            border-radius: 35.556px;
+            background: #000;
+            position: relative;
+            overflow: hidden;
+            transition: all .5s ease-in-out;
+
+            &:hover {
+                box-shadow: 0 0 5px rgba(255, 255, 255, .3);
+            }
+        }
+    }
+
+    footer {
+        background-color: #E9E9E9;
+    }
 }
