--- a/content/scss/pages/_index.scss
+++ b/content/scss/pages/_index.scss
@@ -8,6 +8,7 @@
     background-color: black;
     height: max-content;
     overflow: hidden;
+
     @include responsive (max, 991px) {
         padding-inline: 18px;
     }
@@ -233,6 +234,7 @@
             font-style: normal;
             font-weight: 800;
             line-height: normal;
+
             @include responsive (max, 991px) {
                 font-size: 28px;
                 line-height: 112%
@@ -241,56 +243,33 @@
     }
 
     &__image {
-        width: 600px;
-        height: 400px;
-
-        @include responsive (max, 991px) {
-            width: 600px;
-            height: 400px;
-        }
+        width: 800px;
 
         img {
             width: 100%;
-            height: 100%;
+            aspect-ratio: 2/1;
         }
 
-        @include responsive (max, 600px) {
-            width: 100%;
-            height: 350px;
+        @include responsive(max, 991px) {
+            display: none;
         }
-
-        img {
-            width: 100%;
-            height: 100%;
-        }
-
-        // @include responsive(max, 991px) {
-        //     display: none;
-        // }
     }
 
     &__imageResponsive {
         display: none;
 
-        //     @include responsive (max, 991px) {
-        //         display: inline-block;
-        //         width: 100%;
-        //         height: 100%;
-        //         img {
-        //             width: 100%;
-        //             height: 100%;
-        //         }
-        //     }
-        //     @include responsive (max, 330px) {
-        //         display: inline-block;
-        //         height: 400px;
-        //         width: 90%;
-        //         img {
-        //             width: 100%;
-        //             height: 100%;
-        //         }
-        // }
-        // }
+        @include responsive (max, 991px) {
+            display: inline-block;
+            width: 100%;
+            img {
+                width: 100%;
+                aspect-ratio: 1/1;
+            }
+
+            @include responsive(max, 480px) {
+                width: 100%;
+            }
+        }
     }
 
     &__desc {
@@ -330,6 +309,7 @@
         display: flex;
         align-items: center;
         gap: 0;
+
         .becomePartner {
             &:hover {
                 background-color: $color-primary;
@@ -359,6 +339,7 @@
                 opacity: 1;
                 transition: 0s;
             }
+
             &:active {
                 top: 1px;
             }
@@ -373,9 +354,9 @@
         overflow: hidden;
         position: relative;
         overflow: hidden;
+
         @include responsive (max, 991px) {
-            flex-direction: column;
-            gap: 32px;
+            display: none;
         }
 
         img {
@@ -389,7 +370,22 @@
         .business-text {
             position: absolute;
             top: -5px;
-            #{$s}:5%;
+            #{$s}: 5%;
+        }
+    }
+
+    .responsive-joinUsNow {
+        display: none;
+
+        @include responsive (max, 991px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 32px;
+        }
+
+        .profit-text {
+            margin-#{$s}: 70px;
         }
     }
 }
