--- a/content/scss/pages/_terms.scss
+++ b/content/scss/pages/_terms.scss
@@ -84,13 +84,15 @@
         gap: 50px;
 
         @include responsive (max, 991px) {
-            display: none;
+            flex-direction: column;
         }
 
         &__item {
             width: calc((100% / 4) - 50px);
-            height: 217px;
-
+            aspect-ratio: 2/2;
+            @include responsive (max, 991px) {
+                width: 80%;
+            }
             img {
                 width: 100%;
                 height: 100%;
