--- a/content/css/main-ltr.css
+++ b/content/css/main-ltr.css
@@ -206,7 +206,7 @@ main {
               align-items: center;
       gap: 20px;
       overflow: hidden;
-      width: 240px; }
+      width: 260px; }
       #header .navsbar__logo img {
         width: 114px;
         height: 37px; }
@@ -268,7 +268,7 @@ main {
           -ms-flex-align: center;
               align-items: center;
       gap: 35px;
-      width: 240px; }
+      width: 260px; }
       #header .navsbar__user__login {
         color: white;
         text-align: center;
@@ -582,7 +582,7 @@ footer {
         color: #8B8B8B;
         text-align: center;
         font-family: "Effra VF Trial", sans-serif;
-        font-size: 16px;
+        font-size: 18px;
         font-style: normal;
         font-weight: 400; }
         @media (max-width: 991px) {
@@ -719,24 +719,21 @@ footer {
   background-color: #A8FF35; }
   @media (max-width: 991px) {
     .clickAway {
-      padding: 30px 20px; } }
-  .clickAway__header p {
-    color: #000;
-    text-align: center;
-    font-family: "Effra VF Trial", sans-serif;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: normal; }
+      padding: 30px 20px;
+      gap: 30px; } }
+  @media (max-width: 991px) {
+    .clickAway__header__large {
+      display: none; } }
+  .clickAway__header__small {
+    display: none; }
     @media (max-width: 991px) {
-      .clickAway__header p {
-        font-size: 28px;
-        line-height: 112%; } }
+      .clickAway__header__small {
+        display: block; } }
   .clickAway__image {
-    width: 800px; }
+    width: 607px; }
     .clickAway__image img {
       width: 100%;
-      aspect-ratio: 2/1; }
+      aspect-ratio: 1.78984861977/1; }
     @media (max-width: 991px) {
       .clickAway__image {
         display: none; } }
@@ -748,7 +745,7 @@ footer {
         width: 100%; }
         .clickAway__imageResponsive img {
           width: 100%;
-          aspect-ratio: 1/1; } }
+          aspect-ratio: 1.32473/1; } }
   @media (max-width: 991px) and (max-width: 480px) {
     .clickAway__imageResponsive {
       width: 100%; } }
@@ -761,10 +758,10 @@ footer {
       color: #000;
       text-align: center;
       font-family: "Effra VF Trial", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       font-style: normal;
       font-weight: 400;
-      max-width: 696px;
+      max-width: 850px;
       margin: 0;
       margin: auto; }
 
@@ -962,6 +959,14 @@ footer {
   -ms-flex-item-align: center;
       align-self: center; }
   @media (max-width: 991px) {
+    .downloadHaggz .large-screen {
+      display: none; } }
+  .downloadHaggz .mobile-screen {
+    display: none; }
+    @media (max-width: 991px) {
+      .downloadHaggz .mobile-screen {
+        display: block; } }
+  @media (max-width: 991px) {
     .downloadHaggz {
       padding: 40px 5px; } }
   .downloadHaggz__images {
@@ -985,7 +990,7 @@ footer {
                 flex-direction: column; } }
     .downloadHaggz__images__item {
       width: calc((100% / 4) - 50px);
-      aspect-ratio: 2/2; }
+      aspect-ratio: 1.32473/1; }
       @media (max-width: 991px) {
         .downloadHaggz__images__item {
           width: 80%; } }
